--- a/admin/public/registro_admin.html
+++ b/admin/public/registro_admin.html
@@ -3,20 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- Define a viewport para garantir responsividade em dispositivos móveis -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <!-- Importa o CSS do Bootstrap para estilização -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Garante que o body ocupe a altura total da janela e define layout em coluna */
         body {
             min-height: 100vh;
             display: flex;
             flex-direction: column;
         }
 
-        /* Container que centraliza o formulário de registro verticalmente e horizontalmente */
         .register-container {
             flex: 1;
             display: flex;
@@ -26,7 +22,6 @@
             padding: 2rem 0;
         }
 
-        /* Estiliza o formulário de registro com largura máxima, padding e sombra para destaque */
         .register-form {
             width: 100%;
             max-width: 600px;
@@ -36,7 +31,6 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        /* Garante que o rodapé seja posicionado no final da página */
         .footer {
             margin-top: auto;
         }
@@ -44,58 +38,45 @@
 </head>
 
 <body>
-    <!-- Navbar: Cabeçalho da página com link para a página inicial -->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Admin</a>
         </div>
     </nav>
-    <!-- Container principal que engloba o formulário de registro -->
     <div class="register-container">
         <div class="register-form">
-            <!-- Título centralizado do formulário de registro -->
             <h2 class="text-center mb-4">Registre-se</h2>
-            <!-- Formulário de registro -->
             <form id="registerForm">
-                <!-- Campo de nome do usuário -->
                 <div class="mb-3">
                     <label for="nome" class="form-label">Nome</label>
                     <input type="text" class="form-control" id="nome" required>
                 </div>
-                <!-- Campo de email -->
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" id="email" required>
                 </div>
-                <!-- Campo para senha -->
                 <div class="mb-3">
                     <label for="senha" class="form-label">Senha</label>
                     <input type="password" class="form-control" id="senha" required>
                 </div>
-                <!-- Campo para confirmação da senha -->
                 <div class="mb-3">
                     <label for="confirmPassword" class="form-label">Confirmar Senha</label>
                     <input type="password" class="form-control" id="confirmPassword" required>
                 </div>
-                <!-- Campo para CPF ou CNPJ -->
                 <div class="mb-3">
                     <label for="cpf_cnpj" class="form-label">CPF/CNPJ</label>
                     <input type="text" class="form-control" id="cpf_cnpj" required>
                 </div>
-                <!-- Linha com campos CEP e Endereço -->
                 <div class="row">
-                    <!-- Campo para CEP -->
                     <div class="col-md-4 mb-3">
                         <label for="cep" class="form-label">CEP</label>
                         <input type="text" class="form-control" id="cep" required>
                     </div>
-                    <!-- Campo para Endereço -->
                     <div class="col-md-8 mb-3">
                         <label for="endereco" class="form-label">Endereço</label>
                         <input type="text" class="form-control" id="endereco" required>
                     </div>
                 </div>
-                <!-- Área com botões de submissão e link para voltar para o login -->
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-primary">Registrar</button>
                     <a href="login_adm.html" class="btn btn-outline-secondary">Voltar para Login</a>
@@ -103,26 +84,22 @@
             </form>
         </div>
     </div>
-    <!-- Footer: Exibe informações de copyright e versão do sistema -->
     <footer class="footer mt-auto py-3 bg-dark text-white">
         <div class="container">
             <div class="row">
-                <!-- Copyright -->
                 <div class="col-md-6">
                     <p class="mb-0">&copy; 2025 Sistema E-commerce</p>
                 </div>
-                <!-- Versão do sistema -->
                 <div class="col-md-6 text-end">
                     <p class="mb-0">Versão 1.0</p>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- Script para manipular o envio do formulário de registro -->
     <script>
         // Escuta o evento de submit do formulário
         document.getElementById('registerForm').addEventListener('submit', async (e) => {
-            e.preventDefault(); // Evita o recarregamento padrão da página
+            e.preventDefault();
 
             // Obtém e trata os valores dos campos do formulário
             const nome = document.getElementById('nome').value.trim();
