--- a/usuario/public/pconcluido.html
+++ b/usuario/public/pconcluido.html
@@ -1,1 +1,38 @@
-<!DOCTYPE html><html lang="pt-BR"><head>    <meta charset="UTF-8">    <title>Pagamento Concluído</title>    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"></head><body class="container my-4">    <h2>Pagamento realizado com sucesso!</h2>    <p>Obrigado pela sua compra.</p>    <a href="index.html" class="btn btn-primary">Voltar para a Página Inicial</a></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Pagamento Concluído</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body class="container my-4">
+    <h2>Pagamento realizado com sucesso!</h2>
+    <p>Obrigado pela sua compra.</p>
+    <a href="index.html" class="btn btn-primary">Voltar para a Página Inicial</a>
+
+    <script>
+        async function registrarPedido() {
+            const params = new URLSearchParams(window.location.search);
+            const session_id = params.get('session_id');
+            if (!session_id) {
+                console.error("Session ID não informado");
+                return;
+            }
+            try {
+                const response = await fetch(`/api/orders/create?session_id=${session_id}`); // Requisição POST para registrar o pedido no banco
+                const data = await response.json();
+                if (response.ok) {
+                    console.log("Pedido registrado:", data);
+                } else {
+                    console.error("Erro ao registrar pedido:", data.error);
+                }
+            } catch (err) {
+                console.error("Erro na requisição:", err);
+            }
+        }
+        window.addEventListener('load', registrarPedido);
+    </script>
+</body>
+</html>
