--- a/usuario/public/carrinho_compras.html
+++ b/usuario/public/carrinho_compras.html
@@ -117,7 +117,7 @@
                 alert("Faça login para remover produtos do carrinho.");
                 return;
             }
-            
+
             fetch('/api/cart/remove', { // Requisição para remover o produto do carrinho
                 method: 'DELETE',
                 headers: { 'Content-Type': 'application/json' },
@@ -150,10 +150,11 @@
             return cartItems.map(item => {
                 let relativeImagePath = "";
                 if (item.url_imagem) {
-                    const parts = item.url_imagem.split('/');
-                    relativeImagePath = parts[parts.length - 1];
+                    const parts = item.url_imagem.split(',');
+                    relativeImagePath = parts[0].trim();
                 }
                 return {
+                    id_produto: item.id_produto, // adicionado para identificar o produto
                     price_data: {
                         currency: 'brl',
                         product_data: {
@@ -204,4 +205,5 @@
         window.addEventListener('load', renderCartItems);
     </script>
 </body>
+
 </html>
